@@ -36,8 +36,8 @@ int
 purge (const short purge_after, const struct waste_containers *waste,
         char *time_now, const ushort force);
 
-bool
-is_time_to_purge (ushort force);
+ushort
+is_time_to_purge (void);
 
 short
 orphan_maint(struct waste_containers *waste,
