@@ -120,6 +120,11 @@ enum {
   EXIT_MALLOC,
   EXIT_OPENDIR_FAILURE,
   DATA_DIR_CREATED,
+  FORCE_NOT_USED,
+  IS_NEW_DAY,
+  IS_SAME_DAY,
+  ERR_OPEN,
+  ERR_CLOSE
 };
 
 #endif
