@@ -1,5 +1,13 @@
 === rmw ChangeLog ===
 
+2017-12-07
+
+    The log entry from 2017-12-06 is now obsolete. If purge_after is > 0, rmw
+    will only  show the message "purge has been skipped: use -f or --force"
+    once a day, regardless of verbosity level. This still improves the behavior
+    where that message would display every time if --force wasn't used (or if
+    "force_not_required" was used in the config file.
+
 2017-12-06
 
     rmw will now only show the message "purge has been skipped: use -f or
